add POST /media without s3
